# illcrawl

./: CMakeLists.txt  animation.cpp  animation.hpp  async_io.hpp  async_worker.hpp  camera.cl  camera.cpp  camera.hpp  chandra.cpp  chandra.hpp  cl_types.hpp  coordinate_system.hpp  data_table_loader.hpp  dm_reconstruction_backend_brute_force.cl  dm_reconstruction_backend_brute_force.cpp  dm_reconstruction_backend_brute_force.hpp  dm_reconstruction_backend_grid.cl  dm_reconstruction_backend_grid.cpp  dm_reconstruction_backend_grid.hpp  environment.cpp  environment.hpp  fits.hpp  gaunt_factor.cpp  gaunt_factor.hpp  grid.hpp  hdf5_io.hpp  illcrawl.cpp  illcrawl.hpp  illcrawl_app.cpp  illcrawl_app.hpp  illcrawl_cluster_analysis.cpp  illcrawl_extract_fits_slice.cpp  illcrawl_filter_snapshot.cpp  illcrawl_render.cpp  illcrawl_sum_pixels.cpp  integration.cl  integration.cpp  integration.hpp  interpolation.cl  interpolation_tree.cl  (+72 more)
